cabal-version:   3.0
name:            combp
version:         0.0.0.0
license:         MIT
license-file:    LICENSE
build-type:      Simple
extra-doc-files: CHANGELOG.md

executable combp
    main-is:          Main.hs
    hs-source-dirs:   src/
    other-modules:
        Parse
        Combinator
        Context

    default-language: Haskell2010
    ghc-options:      -Wall -O2
    build-depends:    base ^>=4.17.2.0
